--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
         <div class="container">
             <h1 id="message">Player 1️⃣ Turn</h1>
             <div class="players">
-                <div id="player1">
-                    <h1>Score: 
+                <div id="player1" class="player-container">
+                    <h1>Player 1</h1>
+                    <h2>Score: 
                         <span id="player1Scoreboard">0</span>
                     </h1>
                     <div id="player1Dice" class="dice active">-</div>
                 </div>
-                <div id="player2">
-                    <h1>Score: 
+                <div id="player2" class="player-container">
+                    <h1>Player 2</h1>
+
+                    <h2>Score: 
                         <span id="player2Scoreboard">0</span>
                     </h1>
                     <div id="player2Dice" class="dice">-</div>
